large cutover. switch modal to Go. add additional cloud config
